--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>JavaScript Sandbox: Section 2</h1>
-  <script src="app.js"></script>
+  <script src="app10.js"></script>
 </body>
 </html>
